--- a/drafts/Feurigkeit.Rmd
+++ b/drafts/Feurigkeit.Rmd
@@ -2,14 +2,14 @@
 title: "Ansprache zum Jahreswechsel"
 subtitle: "Feuerigkeit zum Übernächsten"
 author: "Sebastian Sauer"
-date: "3 1 2017"
+date: 2017-01-03
 tags: [engagement]
 layout: post
 ---
 
 Denke ich an 2016, bin ich nicht um den Schlaf gebracht, ich sollte es vielleicht sein, aber was vom Jahr übrig bleibt, stimmt großteils sorgenvoll. Der Krieg um und die Greueltaten in Aleppo haben schon jetzt ein traurigen Platz in den Geschichtsbüchern inne. Die zwei naheliegenden Fragen sind: "Was kann ich tun und was soll ich tun?". Oder mit anderen Worten: Wie lässt sich das Böse auf der Welt bekämpfen?
 
-Dietrich Bonhoeffer, Pastor und Friedensaktivist, von den Nazis am am 9. April 1945 ermordet, schrieb zu dem diesem Thema in seinen Briefen aus dem Gefängnis. Nach Bonhoeffers Meinung ist nicht das Boese das eigentliche Problem, wenn man Missstände (Ungerechtigkeit) bekämpfen will. Dummheit vielmehr sei das eigentliche Problem. Denn das Böse trage den Makel in sich, dass es evidentermaßen falsch sei. Gegen Lüge könne man Wahrheit einsetzen, und gegen Unrecht Recht. Gegen Dummheit hingegen kommt man mit Argumenten nicht an; Dummheit erkennt die eigentlichen Missstände nicht. Dummheit verwechselt Recht mit Unrecht und Lüge mit Wahrheit. Zu letzterem würde man heute sagen: Fake-News sind die Nachrichten des postfaktischen Zeitalters. Oder, ähnlich, um mit dem Bauern Mecken aus Max und Moritz zu sprechen: "Watt geit meck datt an?".
+Dietrich Bonhoeffer, Pastor und Friedensaktivist, von den Nazis am am 9. April 1945 ermordet, schrieb zu diesem Thema in seinen Briefen aus dem Gefängnis. Nach Bonhoeffers Meinung ist nicht das Boese das eigentliche Problem, wenn man Missstände (Ungerechtigkeit) bekämpfen will. Dummheit vielmehr sei das eigentliche Problem. Denn das Böse trage den Makel in sich, dass es evidentermaßen falsch sei. Gegen Lüge könne man Wahrheit einsetzen, und gegen Unrecht Recht. Gegen Dummheit hingegen kommt man mit Argumenten nicht an; Dummheit erkennt die eigentlichen Missstände nicht. Dummheit verwechselt Recht mit Unrecht und Lüge mit Wahrheit. Zu letzterem würde man heute sagen: Fake-News sind die Nachrichten des postfaktischen Zeitalters. Oder, ähnlich, um mit dem Bauern Mecken aus Max und Moritz zu sprechen: "Watt geit meck datt an?".
 
 Bonhoeffers Argument ist gut; dass Dummheit oder wenn nicht Dummheit dann Nicht-Wissen durch Bildung in Wissen und Verstand zu überführen sei, ist die Grundlage unseres Vertrauens in das Lernen. Nebenbei ist Folgerichtigkeit und Faktentreue die Grundlage der Wissenschaft und damit des Fortschritts. Der immense Fortschritt der Technik gibt Grund an den Fortschritt des Denkens, von Nicht-Wissen zu Wissen, zu glauben.
 
@@ -30,5 +30,5 @@ Dieser Schritt des Eingestehens ist so wichtig wie er schwer ist. Er reicht nich
 Im Anfang war die Tat, sagt Faust. (Nicht zu verwechseln mit "im Anfang war die Faust, sagt die Tat"). Man beginne also mit einer (kleinen) Tat und sehe, was passiert. Dann wiederhole man dies. Beispiele für kleine Taten könnten sein: Die Glasscherben auffegen, die schon ein paar Tage auf dem Weg in der Nähe liegen. Einen Deutschkurs für Flüchtlinge anbieten bzw. bei einer entsprechenden Organisation anrufen. Sich politisch engagieren. Die Oma anrufen. Eine gute Zeitung abonnieren. Ein gutes Buch über Europa vor hundert Jahren lesen.
 
 
-Es ist unsere Gesellschaft. Es liegt an uns, was wir aus 2017 machen. Jede kleine Tat summiert sich auf.Ó
+Es ist unsere Gesellschaft. Es liegt an uns, was wir aus 2017 machen. Jede kleine Tat summiert sich auf.
 
