--- a/_posts/blog/2017-08-07-Urhorde.md
+++ b/_posts/blog/2017-08-07-Urhorde.md
@@ -9,6 +9,7 @@ layout: post
 
 # tl;dr
 
+Populismus gestern, heute und morgen sprießt aus der Sehnsucht des Menschen nach der "guten alten Zeit", der Stammesgesellschaft, mit Regeln, die nicht zu hinterfragen sind, uns aufgegeben zum Befolgen. Das Unbehagen in der Kultur liegt in diesem Schmerz der unerfüllten Sehnsucht, in einem Gefühl des "Dahintreibens"[^12], der aus dem Zusammenbruch dieser geschlossenen Gesellschaft herrührt. Moderne Gesellschaften sind invidualisiert(er) und erlauben ein Kritisieren, was richtig ist, ist nicht Gott gegeben, sondern Ergebnis einer Diskussion und kann sich morgen ändern. Diese Offenheit überfordert immer wieder, manche mehr, manche weniger. In diesen echten Schmerz tropft das Betäubungsmittel der Propheten der Stammeshorde. Der Schmerz ist echt, aber der Weg der geschlossenen Gesellschaft schließt die Vernunft als Richtschnur aus und ist daher falsch.
 
 
 
@@ -36,7 +37,7 @@ Im Gegensatz zur geschlossenen Gesellschaft ist die *offene Gesellschaft* von Zw
 
 Man sollte nicht vergessen, dass die Rufer der geschlossenen Gesellschaft, gestern wie heute, "den Versuch machen, einem wirklichen Bedürfnis entgegen zukommen"[^9], nämlich dem Leiden, den inneren Spannungen, der Furcht, der Ungewissheit, den Konsequenzen aus der Entwicklung von der kollektiven Stammesgesellschaft zur individualisierten Gesellschaft hin. Nach Popper ist dieser Weg unumkehrlich; wer einmal vom Baum der Erkenntnis. Daher ist der Versuch, doch zurückzukehren, sinnlos, aussichtslos, zumindest auf Dauer. Gerade weil die Diagnose so treffend ist, ist die vorgeschlagene Therapie (für viele) so verlockend, wenn auch letztlich wirkungslos. Der Übergang von der geschlossenen Gesellschaft zur offenen ist einer der größten Revolutionen, so Popper, die die Menschheit je durchgemacht hat. Dabei ist durchgemacht durchaus wörtlich gemeint, denn dieser Übergang wurde, wird noch und wird weiterhin von heftigen Geburtswehen begleitet. Wir alle werden diese Last, den Zweifel und die Ungewissheit einerseits weiterhin tragen müssen. Sie sind der Preis der Humanität, des Fortschritts, der Weiterentwicklung. Andererseits werden wir sie ertragen müssen in den Konflikten, die um diesen Brennpunkt herum schwelen und entzünden. Wenn wir nur lange genug warten oder alt genug werden, werden wir den Untergang erfahren müssen, vorübergehend, aber womöglich lange genug, um den Umschwung nicht mehr zu erleben.
 
-Man kann also erwarten, und sieht es allenthalbendass die Propheten der geschlossenen Gesellschaft -- Putin, Erdogan, Trump -- Anhänger um sich scharren. Man muss auch erwarten, dass in jedem von uns, eine gewisse Menge an Verhaftung an der Urhorde übrig ist. 
+Man kann also erwarten, und sieht es allenthalben dass die Propheten der geschlossenen Gesellschaft -- Putin, Erdogan, Trump -- Anhänger um sich scharren. Man muss auch erwarten, dass in jedem von uns, eine gewisse Menge an Verhaftung an der Urhorde übrig ist. 
 
 Popper meint einerseits, dass der Lauf der Geschichte unmöglich vorherzusagen sei (zumindest von der jetzigen Wissenschaft), andererseits zeichnet er einen Entwicklungsweg der Menschheit auf. Die Menschheit als Ganzes, so Popper, ist auf einem langen, zwar stetigem und gemächlich steigenden Weg zur immer offeneren Gesellschaft, aber die neue Generation ist bestenfalls ein bisschen weiter als die alte. Bewunderung für Mitglieder der herrschenden Klasse und für Heroen ist noch weit verbreitet; das kann man als Beispiel für die noch starken "Gene der Urhorde" deuten, wenn man will. 
 
@@ -64,3 +65,4 @@ Bd.1: Popper, K. R. (1972). Der Zauber Platons: Die offene Gesellschaft und ihre
 [^9]: S. 204, Bd.1
 [^10]: S. 204, Bd.1
 [^11]: Ähnlich, aber nicht von Popper, sondern Singer, sinngemäß: "Deine Meinung weicht von meiner ab, aber ich verteidige dein Recht, sie kundzutun". 
+[^12]: S. 235, Bd.1
