add category "blog"

--- a/_posts/2017-08-07-Urhorde.md
+++ b/_posts/2017-08-07-Urhorde.md
@@ -1,8 +1,9 @@
 ---
 title: "Poppers Idee von der Urhorde"
-subtitle: "Ein verlorerenes Zitat und die offene Gesellschaft"
+subtitle: "Ein verlorenes Zitat und die offene Gesellschaft"
 author: "Sebastian Sauer"
 date: 2017-08-07
+categories: blog
 tags: [Popper, offene_Gesellschaft, Populismus]
 layout: post
 ---
@@ -24,11 +25,11 @@ Eine Reaktion darauf war ein Tweet von [Moritz Heene](https://twitter.com/MorHee
 
 Um diesen zentralen Gedanken Poppers zu verstehen - und in der Relevanz der heutigen Zeit zu verstehen - hilft es, sich den Gedanken der *Stammesgesellschaft* [^1], der "Urhorde" oder "primitiven Horde"[^10] vor Augen zu führen (s. auch [diesen Post](https://sebastiansauer.github.io/psy_pol/blog/Offene_Gesellschaft_1/)). Dieser Gedanke Poppers (ob er originär von ihm ist, weiß ich nicht) beruht auf der Kennzeichnung unserer Kultur als von den griechischen Kriegerbanden abstammend[^2]. Solche Stämme wurden gewöhnlich von einem Patriarchen, Stammeshäuptling, König oder aristokratischen Familien geführt. Ein Merkmal dieser Stammesverbände ist die Zementiertheit der sozialen Bedingung; noch stärker, des Nichthinterfragenkönnens des sozialen Gewebes, ein "Das ist eben so"; eine magische Erklärung (keine rationale) der sozialen (und auch umweltlichen) Gegebenheiten. Man kann mit Popper spekulieren, dass magische Erklärungen eine Rationalisierung der Furcht vor der Ungewissheit und der Kleinheit und Machtlosigkeit des Menschen im Allgemeinen und Speziellen steht. Von dieser rigiden Stammeskultur, so Popper, geht unsere Entwicklung aus; wir stammen von einer Urhorde ab[^3].
 
-Diese Art von Gesellschaft kann man mit Popper *geschlossen* nennen, weil vorgegeben ist, was richtig und falsch oder gut und böse ist. Es gibt dort keinen Zweifel, was zu tun ist. Weil es keinen Zweifel gibt, gibt es kein kritisches Betrachten. Es darf kein kritisches Betrachten geben, birgt das doch die Bedrohung, dass überlieferte Gewissheiten gekippt würden. Es entstünde Verunsicherung. Damit kennzeichnet sich ein Grundunbehagen in der Kultur; kein Spagat zwischen Bedürfnis und Kultur, sondern ob des Leidens der Ungewissheit um den richtigen Weg. Der Zweifel, der nötige Zweifel ist der Stachel, der Sündenfall, die Ursache des Leidens des modernen Menschen. [Russels Zitat](https://twitter.com/MorHeene/status/894294909645139969), das Moritz Heene anführt, passt insofern, als es die Geringschätzung der Vernunft, also eine Einstellung der geschlossenen Gesellschaft, vieler Menschen vermutet.
+Diese Art von Gesellschaft kann man mit Popper *geschlossen* nennen, weil vorgegeben ist, was richtig und falsch oder gut und böse ist. Es gibt dort keinen Zweifel, was zu tun ist. Weil es keinen Zweifel gibt, gibt es kein kritisches Betrachten. Es darf kein kritisches Betrachten geben, birgt das doch die Bedrohung, dass überlieferte Gewissheiten gekippt würden. Es entstünde Verunsicherung. Damit kennzeichnet sich ein Grundunbehagen in der Kultur; kein Spagat zwischen Bedürfnis und Kultur, sondern ob des Leidens der Ungewissheit um den richtigen Weg. Der Zweifel, der nötige Zweifel ist der Stachel, der Sündenfall, die Ursache des Leidens des modernen Menschen. [Russells Zitat](https://twitter.com/MorHeene/status/894294909645139969), das Moritz Heene anführt, passt insofern, als es die Geringschätzung der Vernunft, also eine Einstellung der geschlossenen Gesellschaft, vieler Menschen vermutet.
 
 Die Stammesgesellschaft erlebt sich als Gemeinsames in einer Welt von Feinden, von Bestimmung und Vorsehung, von uns und nicht-uns. Als Schoß der Gewissheit, des Blutsbande, der Sicherheit. "Mein Stamm geht vor", "Meine Bande zuerst" sind schlussrichtige Überzeugungen innerhalb der Denkweise der geschlossenen Gesellschaft. Da der Zweifel der Urfeind der geschlossenen Gesellschaft ist, darf es ihn nicht geben, er muss abgedrängt werden. Das Gegenteil von Zweifel ist Stärke und Gewissheit, die sich einfach im "starken Mann" als Führer personifiziert, die Helden besingt. Dazu Platon:
 
->    Und der Staat wird Monumente errichten, ... um ihr Angedenken zu wahren. Und Opfer werden ihnen als Halbgöttern dargebracht werden, .. als Menschen, die durch Genade geheiligt und den Göttern ähnlich sind.[^4]
+>    Und der Staat wird Monumente errichten, ... um ihr Angedenken zu wahren. Und Opfer werden ihnen als Halbgöttern dargebracht werden, .. als Menschen, die durch Gnade geheiligt und den Göttern ähnlich sind.[^4]
 
 
 Platon wird von Popper als der "Königliche Philosoph" und erster Anführer der Idee der geschlossenen Gesellschaft identifiziert[^5]. Folgerichtig mündet Platons Staatsphilosophie in einem Totalitarismus, der Menschlichkeit entbehrt. Klassenteilung, streng, mit einem Blick auf die Interessen der herrschenden Klasse sowie Zensur sind wesentliche Komponenten Platons Staatslehre[^6]. So soll "Der Weise ... führen und herrschen und der Unwissende soll ihm folgen"[^7]. Kompletter Gehorsam wird verlangt, eingetrichtert und sanktioniert. Platon war von edlen Motiven erfüllt, als er das Bild zum ausweglosen Totalitarismus als Kulmination der Menschlichkeit aufzeichnete. Das, und sein Genie, macht seine Lehre gefährlich.
@@ -37,9 +38,9 @@ Im Gegensatz zur geschlossenen Gesellschaft ist die *offene Gesellschaft* von Zw
 
 Man sollte nicht vergessen, dass die Rufer der geschlossenen Gesellschaft, gestern wie heute, "den Versuch machen, einem wirklichen Bedürfnis entgegen zukommen"[^9], nämlich dem Leiden, den inneren Spannungen, der Furcht, der Ungewissheit, den Konsequenzen aus der Entwicklung von der kollektiven Stammesgesellschaft zur individualisierten Gesellschaft hin. Nach Popper ist dieser Weg unumkehrlich; wer einmal vom Baum der Erkenntnis. Daher ist der Versuch, doch zurückzukehren, sinnlos, aussichtslos, zumindest auf Dauer. Gerade weil die Diagnose so treffend ist, ist die vorgeschlagene Therapie (für viele) so verlockend, wenn auch letztlich wirkungslos. Der Übergang von der geschlossenen Gesellschaft zur offenen ist einer der größten Revolutionen, so Popper, die die Menschheit je durchgemacht hat. Dabei ist durchgemacht durchaus wörtlich gemeint, denn dieser Übergang wurde, wird noch und wird weiterhin von heftigen Geburtswehen begleitet. Wir alle werden diese Last, den Zweifel und die Ungewissheit einerseits weiterhin tragen müssen. Sie sind der Preis der Humanität, des Fortschritts, der Weiterentwicklung. Andererseits werden wir sie ertragen müssen in den Konflikten, die um diesen Brennpunkt herum schwelen und entzünden. Wenn wir nur lange genug warten oder alt genug werden, werden wir den Untergang erfahren müssen, vorübergehend, aber womöglich lange genug, um den Umschwung nicht mehr zu erleben.
 
-Man kann also erwarten, und sieht es allenthalben dass die Propheten der geschlossenen Gesellschaft -- Putin, Erdogan, Trump -- Anhänger um sich scharren. Man muss auch erwarten, dass in jedem von uns, eine gewisse Menge an Verhaftung an der Urhorde übrig ist. 
+Man kann also erwarten, und sieht es allenthalben dass die Propheten der geschlossenen Gesellschaft -- Putin, Erdogan, Trump -- Anhänger um sich scharren. Man muss auch erwarten, dass in jedem von uns, eine gewisse Menge an Verhaftung an der Urhorde übrig ist.
 
-Popper meint einerseits, dass der Lauf der Geschichte unmöglich vorherzusagen sei (zumindest von der jetzigen Wissenschaft), andererseits zeichnet er einen Entwicklungsweg der Menschheit auf. Die Menschheit als Ganzes, so Popper, ist auf einem langen, zwar stetigem und gemächlich steigenden Weg zur immer offeneren Gesellschaft, aber die neue Generation ist bestenfalls ein bisschen weiter als die alte. Bewunderung für Mitglieder der herrschenden Klasse und für Heroen ist noch weit verbreitet; das kann man als Beispiel für die noch starken "Gene der Urhorde" deuten, wenn man will. 
+Popper meint einerseits, dass der Lauf der Geschichte unmöglich vorherzusagen sei (zumindest von der jetzigen Wissenschaft), andererseits zeichnet er einen Entwicklungsweg der Menschheit auf. Die Menschheit als Ganzes, so Popper, ist auf einem langen, zwar stetigem und gemächlich steigenden Weg zur immer offeneren Gesellschaft, aber die neue Generation ist bestenfalls ein bisschen weiter als die alte. Bewunderung für Mitglieder der herrschenden Klasse und für Heroen ist noch weit verbreitet; das kann man als Beispiel für die noch starken "Gene der Urhorde" deuten, wenn man will.
 
 Persönlich stimme ich Popper zu, dass der Weg, einmal eingeschlagen, nicht umkehrbar ist, aber ich auch nicht so optimistisch, dass das so schnell ginge, dass ich große Rückschläge (notwendig) nicht erlebe. Im Gegenteil glaube ich (auch mit Popper), dass, soweit wir blicken können, alles offen ist, die Geschichte keinen Sinn hat, sondern wir ihn ihr geben müssen. Wir haben die Wahl: Die offene Gesellschaft mit ihren Fehltritten, Zweifel und Unzulänglichkeit. Oder die geschlossene Gesellschaft, die sicher in Totalität führt, in der der Einzelne nichts zählt. Entscheiden wir uns für die offene Gesellschaft und treten wir für sie ein.
 
@@ -64,5 +65,5 @@ Bd.1: Popper, K. R. (1972). Der Zauber Platons: Die offene Gesellschaft und ihre
 [^8]: Peter Singers *Praktische Ethik* ist dazu interessant.
 [^9]: S. 204, Bd.1
 [^10]: S. 204, Bd.1
-[^11]: Ähnlich, aber nicht von Popper, sondern Singer, sinngemäß: "Deine Meinung weicht von meiner ab, aber ich verteidige dein Recht, sie kundzutun". 
+[^11]: Ähnlich, aber nicht von Popper, sondern Singer, sinngemäß: "Deine Meinung weicht von meiner ab, aber ich verteidige dein Recht, sie kundzutun".
 [^12]: S. 235, Bd.1
