--- a/_posts/2017-08-07-Urhorde.md
+++ b/_posts/2017-08-07-Urhorde.md
@@ -18,7 +18,7 @@ Populismus gestern, heute und morgen sprießt aus der Sehnsucht des Menschen nac
 
 Kürzlich postete ich auf [Twitter](https://twitter.com/sauer_sebastian/status/894127624771031041) erste Ergebnisse einer Analyse von Tweets deutscher Politiker (Details auf [Github](https://github.com/sebastiansauer/polits_tweet_mining)). In dem Post zeigte ich eine Wordcloud der 100 häufigsten Wörter in diesen (ca. 320k) Tweets:
 
-![](../images/2017-08-07/wordcloud_01_crop.png)
+![]({{ site.url }}/images/2017-08-07/wordcloud_01_crop.png)
 
 
 Eine Reaktion darauf war ein Tweet von [Moritz Heene](https://twitter.com/MorHeene), der die Inhaltsleere des Wahlkampfs (oder meines Tweets) bescheinigte. Ein kurzer Austausch entspann sich, in dem Moritz Heene im Rahmen eines Zitats von Bertrand Russell auf, wie Psychologen das ausdrücken würden, selektive Wahrnehmung der Menschen [hinwies](https://twitter.com/MorHeene/status/894294909645139969). Nach dem Motto: "Stör mich nicht mit Deinen Fakten, wenn ich eine so schöne Meinung habe" (ich glaube, das ist auch ein Zitat, aber, meine Schuld, ich kann mich nicht an einen Autor entsinnen). [Meine Antwort](https://twitter.com/sauer_sebastian/status/894298755738087424) darauf war, dass sich Menschen laut Popper nach der "Urhorde" zurücksehnten. Außerdem zitierte ich aus dem Gedächtnis aus dem gleichen Buch, *Die offene Gesellschaft und ihre Feinde*, Popper mit "jeder, der alt genug wird, erlebt den Rückfall der Gesellschaft dahin [zur Urhorde]". Moritz Heene wiederum bat mich um das genau Zitat, dass ich ihn heute Abend, da ich diese Zeile schreibe, zusicherte oder zumindest heraussuchen wollte. Nach einigem Blättern in den beiden Bänden jenes Buches muss ich eingestehen, dass ich es nicht gefunden habe. Wer die (zumindest einigermaßen) passende Stelle in dem Buch findet, möge bitte Moritz Heene (und mir) Bescheid geben. Moritz Heene bat nicht um Belege für den ersten Teil des Tweets, den Teil mit der Urhorde (hört sich ja eigentlich interessanter an). Wohl weil dieser Teil recht bekannt ist. Dazu gleich noch mehr. Der zweite Teil, dass mit dem Rückfall ist mir, sofern mich mein Gedächtnis nicht trügt, deswegen in Erinnerung geblieben, weil es so ~~pessimistisch~~ ~~abgeklärt~~ mutig-traurig?, weil den Tatsachen ins Gesicht schauend, ist. Man kann Popper als Optimist verstehen: Die humanitäre Gesellschaft ist diejenige, die sich unaufhaltsam entwickelt. Das Wesen dieser humanitären Gesellschaft ist Vernunft. Allerdings sind Rückschläge zu erwarten, daher rührt das oben erwähnte Zitat.
