--- a/_posts/2017-08-07-Urhorde.md
+++ b/_posts/2017-08-07-Urhorde.md
@@ -10,7 +10,7 @@ layout: post
 
 # tl;dr
 
-Populismus gestern, heute und morgen sprießt aus der Sehnsucht des Menschen nach der "guten alten Zeit", der Stammesgesellschaft, mit Regeln, die nicht zu hinterfragen sind, uns aufgegeben zum Befolgen. Das Unbehagen in der Kultur liegt in diesem Schmerz der unerfüllten Sehnsucht, in einem Gefühl des "Dahintreibens"[^12], der aus dem Zusammenbruch dieser geschlossenen Gesellschaft herrührt. Moderne Gesellschaften sind invidualisiert(er) und erlauben ein Kritisieren, was richtig ist, ist nicht Gott gegeben, sondern Ergebnis einer Diskussion und kann sich morgen ändern. Diese Offenheit überfordert immer wieder, manche mehr, manche weniger. In diesen echten Schmerz tropft das Betäubungsmittel der Propheten der Stammeshorde. Der Schmerz ist echt, aber der Weg der geschlossenen Gesellschaft schließt die Vernunft als Richtschnur aus und ist daher falsch.
+Populismus gestern, heute und morgen sprießt aus der Sehnsucht des Menschen nach der "guten alten Zeit", der Stammesgesellschaft, mit Regeln, die nicht zu hinterfragen sind, uns aufgegeben zum Befolgen. Das Unbehagen in der Kultur liegt in diesem Schmerz der unerfüllten Sehnsucht, in einem Gefühl des "Dahintreibens"[^12], der aus dem Zusammenbruch dieser geschlossenen Gesellschaft herrührt. Moderne Gesellschaften sind invidualisiert(er) und erlauben ein Kritisieren; was richtig ist und was falsch, ist nicht Gott gegeben, sondern Ergebnis einer Diskussion. Kann sich morgen ändern. Diese Offenheit überfordert immer wieder, manche mehr, manche weniger. In diesen echten Schmerz tropft das Betäubungsmittel der Propheten der Stammeshorde. Der Schmerz ist echt, aber das Betäubungsmittel bringt keine Besserung. Der Weg der geschlossenen Gesellschaft schließt die Vernunft als Richtschnur aus und ist daher falsch. Ein Aufruf für die offene Gesellschaft.
 
 
 
@@ -21,7 +21,9 @@ Kürzlich postete ich auf [Twitter](https://twitter.com/sauer_sebastian/status/8
 ![](https://sebastiansauer.github.io/psy_pol/images/2017-08-07/wordcloud_01_crop.png)
 
 
-Eine Reaktion darauf war ein Tweet von [Moritz Heene](https://twitter.com/MorHeene), der die Inhaltsleere des Wahlkampfs (oder meines Tweets) bescheinigte. Ein kurzer Austausch entspann sich, in dem Moritz Heene im Rahmen eines Zitats von Bertrand Russell auf, wie Psychologen das ausdrücken würden, selektive Wahrnehmung der Menschen [hinwies](https://twitter.com/MorHeene/status/894294909645139969). Nach dem Motto: "Stör mich nicht mit Deinen Fakten, wenn ich eine so schöne Meinung habe" (ich glaube, das ist auch ein Zitat, aber, meine Schuld, ich kann mich nicht an einen Autor entsinnen). [Meine Antwort](https://twitter.com/sauer_sebastian/status/894298755738087424) darauf war, dass sich Menschen laut Popper nach der "Urhorde" zurücksehnten. Außerdem zitierte ich aus dem Gedächtnis aus dem gleichen Buch, *Die offene Gesellschaft und ihre Feinde*, Popper mit "jeder, der alt genug wird, erlebt den Rückfall der Gesellschaft dahin [zur Urhorde]". Moritz Heene wiederum bat mich um das genau Zitat, dass ich ihn heute Abend, da ich diese Zeile schreibe, zusicherte oder zumindest heraussuchen wollte. Nach einigem Blättern in den beiden Bänden jenes Buches muss ich eingestehen, dass ich es nicht gefunden habe. Wer die (zumindest einigermaßen) passende Stelle in dem Buch findet, möge bitte Moritz Heene (und mir) Bescheid geben. Moritz Heene bat nicht um Belege für den ersten Teil des Tweets, den Teil mit der Urhorde (hört sich ja eigentlich interessanter an). Wohl weil dieser Teil recht bekannt ist. Dazu gleich noch mehr. Der zweite Teil, dass mit dem Rückfall ist mir, sofern mich mein Gedächtnis nicht trügt, deswegen in Erinnerung geblieben, weil es so ~~pessimistisch~~ ~~abgeklärt~~ mutig-traurig?, weil den Tatsachen ins Gesicht schauend, ist. Man kann Popper als Optimist verstehen: Die humanitäre Gesellschaft ist diejenige, die sich unaufhaltsam entwickelt. Das Wesen dieser humanitären Gesellschaft ist Vernunft. Allerdings sind Rückschläge zu erwarten, daher rührt das oben erwähnte Zitat.
+Eine Reaktion darauf war ein Tweet von [Moritz Heene](https://twitter.com/MorHeene), der die Inhaltsleere des Wahlkampfs (oder meines Tweets) bescheinigte. Ein kurzer Austausch entspann sich, in dem Moritz Heene im Rahmen eines Zitats von Bertrand Russell auf die, wie Psychologen das ausdrücken, selektive Wahrnehmung der Menschen [hinwies](https://twitter.com/MorHeene/status/894294909645139969). Nach dem Motto: "Stör mich nicht mit Deinen Fakten, wenn ich eine so schöne Meinung habe" (ich glaube, das ist auch ein Zitat, aber, meine Schuld, ich kann mich nicht an einen Autor entsinnen). [Meine Antwort](https://twitter.com/sauer_sebastian/status/894298755738087424) darauf war, dass sich Menschen laut Popper nach der "Urhorde" zurücksehnten. Außerdem zitierte ich aus dem Gedächtnis aus dem gleichen Buch, *Die offene Gesellschaft und ihre Feinde*, Popper mit "jeder, der alt genug wird, erlebt den Rückfall der Gesellschaft dahin [zur Urhorde]". Moritz Heene wiederum bat mich um das genau Zitat, dass ich ihn heute Abend, da ich diese Zeile schreibe, zusicherte oder zumindest heraussuchen wollte. Nach einigem Blättern in den beiden Bänden jenes Buches muss ich eingestehen, dass ich es nicht gefunden habe. Wer die (zumindest einigermaßen) passende Stelle in dem Buch findet, möge bitte Moritz Heene (und mir) Bescheid geben.
+
+Moritz Heene bat nicht um Belege für den ersten Teil des Tweets, den Teil mit der Urhorde (hört sich ja eigentlich interessanter an). Wohl weil dieser Teil recht bekannt ist. Dazu gleich noch mehr. Der zweite Teil (das mit dem Rückfall) ist mir, sofern mich mein Gedächtnis nicht trügt, deswegen in Erinnerung geblieben, weil es so ~~pessimistisch~~ ~~abgeklärt~~ mutig-traurig?, weil den Tatsachen ins Gesicht schauend, ist. Man kann Popper als Optimist verstehen: Die humanitäre Gesellschaft ist diejenige, die sich unaufhaltsam entwickelt. Das Wesen dieser humanitären Gesellschaft ist Vernunft. Allerdings sind Rückschläge zu erwarten, daher rührt das oben erwähnte Zitat.
 
 Um diesen zentralen Gedanken Poppers zu verstehen - und in der Relevanz der heutigen Zeit zu verstehen - hilft es, sich den Gedanken der *Stammesgesellschaft* [^1], der "Urhorde" oder "primitiven Horde"[^10] vor Augen zu führen (s. auch [diesen Post](https://sebastiansauer.github.io/psy_pol/blog/Offene_Gesellschaft_1/)). Dieser Gedanke Poppers (ob er originär von ihm ist, weiß ich nicht) beruht auf der Kennzeichnung unserer Kultur als von den griechischen Kriegerbanden abstammend[^2]. Solche Stämme wurden gewöhnlich von einem Patriarchen, Stammeshäuptling, König oder aristokratischen Familien geführt. Ein Merkmal dieser Stammesverbände ist die Zementiertheit der sozialen Bedingung; noch stärker, des Nichthinterfragenkönnens des sozialen Gewebes, ein "Das ist eben so"; eine magische Erklärung (keine rationale) der sozialen (und auch umweltlichen) Gegebenheiten. Man kann mit Popper spekulieren, dass magische Erklärungen eine Rationalisierung der Furcht vor der Ungewissheit und der Kleinheit und Machtlosigkeit des Menschen im Allgemeinen und Speziellen steht. Von dieser rigiden Stammeskultur, so Popper, geht unsere Entwicklung aus; wir stammen von einer Urhorde ab[^3].
 
@@ -36,7 +38,7 @@ Platon wird von Popper als der "Königliche Philosoph" und erster Anführer der 
 
 Im Gegensatz zur geschlossenen Gesellschaft ist die *offene Gesellschaft* von Zweifel, Fragen und Irrtümern gekennzeichnet. Ihr Paradox ist, dass diese Schwäche ihre Stärke ist. Ihr Stärke liegt darin, dass Irrtümer eingestanden werden (können). Dem "Big Picture" einer Utopie wird eine Politik der kleinen Schritte, des tastenden Fortschritts, gegenübergestellt. Die Ähnlichkeit zum demokratischen Diskurs liegt auf der Hand: mühevoll, langsam, mit vielen Fehlern und fehltretenden Protagonisten ausgestattet. Was Popper dabei unter Rationalismus versteht, ist etwa Folgendes: "Lass uns diskutieren, ich bin bereit einzusehen, wenn Deine Idee besser ist"[^11]. Er zieht eine  Parallele (vielleicht etwas gekünstelt) von der Staatstheorie zur Wissenschaft: Nicht nur die Vernunft, das folgerichtige Denken, sei entscheidend, sondern ein praktisches Überprüfen an der Wirklichkeit, die Empirie. Ein Standpunkt, den die Vernunft uns gebietet, ist, dass alle Menschen prinzipiell gleichwertig sind^[^9]. Warum sollte mein Schmerz mehr oder weniger wichtig sein als deiner? Diese Aussage, stellvertretend für viele andere, die die Vernunft ~~diktiert~~ vorschlägt, rühren das Gemüt weit weniger auf als Variationen von "Wir sind der überlegene Stamm!".
 
-Man sollte nicht vergessen, dass die Rufer der geschlossenen Gesellschaft, gestern wie heute, "den Versuch machen, einem wirklichen Bedürfnis entgegen zukommen"[^9], nämlich dem Leiden, den inneren Spannungen, der Furcht, der Ungewissheit, den Konsequenzen aus der Entwicklung von der kollektiven Stammesgesellschaft zur individualisierten Gesellschaft hin. Nach Popper ist dieser Weg unumkehrlich; wer einmal vom Baum der Erkenntnis. Daher ist der Versuch, doch zurückzukehren, sinnlos, aussichtslos, zumindest auf Dauer. Gerade weil die Diagnose so treffend ist, ist die vorgeschlagene Therapie (für viele) so verlockend, wenn auch letztlich wirkungslos. Der Übergang von der geschlossenen Gesellschaft zur offenen ist einer der größten Revolutionen, so Popper, die die Menschheit je durchgemacht hat. Dabei ist durchgemacht durchaus wörtlich gemeint, denn dieser Übergang wurde, wird noch und wird weiterhin von heftigen Geburtswehen begleitet. Wir alle werden diese Last, den Zweifel und die Ungewissheit einerseits weiterhin tragen müssen. Sie sind der Preis der Humanität, des Fortschritts, der Weiterentwicklung. Andererseits werden wir sie ertragen müssen in den Konflikten, die um diesen Brennpunkt herum schwelen und entzünden. Wenn wir nur lange genug warten oder alt genug werden, werden wir den Untergang erfahren müssen, vorübergehend, aber womöglich lange genug, um den Umschwung nicht mehr zu erleben.
+Man sollte nicht vergessen, dass die Rufer der geschlossenen Gesellschaft, gestern wie heute, "den Versuch machen, einem wirklichen Bedürfnis entgegen zukommen"[^9], nämlich dem Leiden, den inneren Spannungen, der Furcht, der Ungewissheit, den Konsequenzen aus der Entwicklung von der kollektiven Stammesgesellschaft zur individualisierten Gesellschaft hin. Nach Popper ist dieser Weg unumkehrlich; wer einmal vom Baum der Erkenntnis und so weiter... Daher ist der Versuch, doch zurückzukehren, sinnlos, aussichtslos, zumindest auf Dauer. Gerade weil die Diagnose so treffend ist, ist die vorgeschlagene Therapie (für viele) so verlockend, wenn auch letztlich wirkungslos. Der Übergang von der geschlossenen Gesellschaft zur offenen ist einer der größten Revolutionen, so Popper, die die Menschheit je durchgemacht hat. Dabei ist durchgemacht durchaus wörtlich gemeint, denn dieser Übergang wurde, wird noch und wird weiterhin von heftigen Geburtswehen begleitet. Wir alle werden diese Last, den Zweifel und die Ungewissheit einerseits weiterhin tragen müssen. Sie sind der Preis der Humanität, des Fortschritts, der Weiterentwicklung. Andererseits werden wir sie ertragen müssen in den Konflikten, die um diesen Brennpunkt herum schwelen und entzünden. Wenn wir nur lange genug warten oder alt genug werden, werden wir den Untergang erfahren müssen, vorübergehend, aber womöglich lange genug, um den Umschwung nicht mehr zu erleben.
 
 Man kann also erwarten, und sieht es allenthalben dass die Propheten der geschlossenen Gesellschaft -- Putin, Erdogan, Trump -- Anhänger um sich scharren. Man muss auch erwarten, dass in jedem von uns, eine gewisse Menge an Verhaftung an der Urhorde übrig ist.
 
