--- a/_posts/2017-08-07-Urhorde.md
+++ b/_posts/2017-08-07-Urhorde.md
@@ -40,7 +40,7 @@ Im Gegensatz zur geschlossenen Gesellschaft ist die *offene Gesellschaft* von Zw
 
 Man sollte nicht vergessen, dass die Rufer der geschlossenen Gesellschaft, gestern wie heute, "den Versuch machen, einem wirklichen Bedürfnis entgegen zukommen"[^9], nämlich dem Leiden, den inneren Spannungen, der Furcht, der Ungewissheit, den Konsequenzen aus der Entwicklung von der kollektiven Stammesgesellschaft zur individualisierten Gesellschaft hin. Nach Popper ist dieser Weg unumkehrlich; wer einmal vom Baum der Erkenntnis und so weiter... Daher ist der Versuch, doch zurückzukehren, sinnlos, aussichtslos, zumindest auf Dauer. Gerade weil die Diagnose so treffend ist, ist die vorgeschlagene Therapie (für viele) so verlockend, wenn auch letztlich wirkungslos. Der Übergang von der geschlossenen Gesellschaft zur offenen ist einer der größten Revolutionen, so Popper, die die Menschheit je durchgemacht hat. Dabei ist durchgemacht durchaus wörtlich gemeint, denn dieser Übergang wurde, wird noch und wird weiterhin von heftigen Geburtswehen begleitet. Wir alle werden diese Last, den Zweifel und die Ungewissheit einerseits weiterhin tragen müssen. Sie sind der Preis der Humanität, des Fortschritts, der Weiterentwicklung. Andererseits werden wir sie ertragen müssen in den Konflikten, die um diesen Brennpunkt herum schwelen und entzünden. Wenn wir nur lange genug warten oder alt genug werden, werden wir den Untergang erfahren müssen, vorübergehend, aber womöglich lange genug, um den Umschwung nicht mehr zu erleben.
 
-Man kann also erwarten, und sieht es allenthalben dass die Propheten der geschlossenen Gesellschaft -- Putin, Erdogan, Trump -- Anhänger um sich scharren. Man muss auch erwarten, dass in jedem von uns, eine gewisse Menge an Verhaftung an der Urhorde übrig ist.
+Man kann also erwarten, und sieht es allenthalben dass die Propheten der geschlossenen Gesellschaft -- Putin, Erdogan, Trump -- Anhänger um sich scharren. Man muss auch erwarten, dass in jedem von uns eine gewisse Menge an Verhaftung an der Urhorde übrig ist.
 
 Popper meint einerseits, dass der Lauf der Geschichte unmöglich vorherzusagen sei (zumindest von der jetzigen Wissenschaft), andererseits zeichnet er einen Entwicklungsweg der Menschheit auf. Die Menschheit als Ganzes, so Popper, ist auf einem langen, zwar stetigem und gemächlich steigenden Weg zur immer offeneren Gesellschaft, aber die neue Generation ist bestenfalls ein bisschen weiter als die alte. Bewunderung für Mitglieder der herrschenden Klasse und für Heroen ist noch weit verbreitet; das kann man als Beispiel für die noch starken "Gene der Urhorde" deuten, wenn man will.
 
