--- a/_posts/2017-10-12-afd-map.md
+++ b/_posts/2017-10-12-afd-map.md
@@ -7,31 +7,6 @@ layout: post
 categories: blog
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-
-set.seed(1014)
-options(digits = 3)
-
-knitr::opts_chunk$set(
-  comment = "#>",
-  collapse = TRUE,
-  message = FALSE,
-  warning = FALSE,
-  cache = TRUE,
-  out.width = "70%",
-  fig.align = 'center',
-  fig.width = 6,
-  fig.asp = 0.618,  # 1 / phi
-  fig.show = "hold",
-  size = "tiny"
-)
-
-library(tidyverse)
-
-```
-
-
 
 Eine häufig diskutierte Hypothese im Lichte der hohen Wahlerfolge der AfD lautet, dass die AfD von "Abgehängten" oder vielleicht besser "sich abgehängt fühlenden Bürgern" gewählt würde. Es wurden einige Argumente/ Belege dafür und einige dageben angeführt. Dieser Post untersucht diese Hypothese anhand der Wahlergebnisse der BTW17: Es werden die Wahlergebnisse der AfD (Zweitstimmen) ins Verhältnis gesetzt mit der Arbeitslosenquote des jeweiligen Wahlkreises. Das Ergebnis wird dann pro Wahlkreis visualisiert; dabei spiegelt im Diagramm die Farbnuance eines Wahlkreises die Übereinstimmung wider zwischen AfD-Wahlergebnis und der Arbeitslosigkeit.
 
@@ -43,13 +18,15 @@ Die Daten stammen vom Bundeswahlleiter und wurden am 10. Oktober 2017 herunterge
 
 Dieses Diagramm zeigt die Arbeitslosigkeit pro Wahlkeis:
 
-![](./2017-10-12/unemp.png)
 
-Wie man sieht, ist die Arbeitslosigkeit im Süden deutlich geringer als im Norden; im Osten insgesamt etwas höher als im Westen. 
+![](https://sebastiansauer.github.io/images/2017-10-12/unemp.png)
+
+
+Wie man sieht, ist die Arbeitslosigkeit im Süden deutlich geringer als im Norden; im Osten insgesamt etwas höher als im Westen.
 
 Dieses Diagramm zeigt den Anteil gültiger Zweitstimmen bei der Bundestagswahl 2017:
 
-![](./2017-10-12/afd_prop.png)
+![](https://sebastiansauer.github.io/images/2017-10-12/afd_prop.png)
 
 Das Diagramm zeigt, wie allgemein bekannt, das in Sachsen die AfD-Zustimmung am höchsten ist; Werte um 30% sind in rotem Farbton dargestellt (eine Standard-Farbpalette übrigens).
 
@@ -59,24 +36,23 @@ Kommen wir zur zentralen Frage dieses Posts: Steht die AfD-Stimmenzahl (eines Wa
 
 Es gibt verschiedene Wege, diese Frage anzugehen. Ein Weg ist, dass Verhältnis von AfD-Anteil zur Arbeitslosenquote zu bilden. Ein Wert von 1 würde dann sagen, dass der AfD-Stimmen-Prozentwert dem Prozentwert der Arbeitslosigkeit entspricht. Ein Wert von 2 sagt, dass der AfD-Anteil doppelt so groß wie die Arbeitslosigkeit ist usw.
 
-![](./2017-10-12/afd_dens.png)
+![](https://sebastiansauer.github.io/images/2017-10-12/afd_dens.png)
 
 Man sieht, dass im reichen Zentralbayern im Verhältnis zur Arbleitslosigkeitsquote relativ am meisten Leute die AfD gewählt haben. Offenbar war hier die Arbeitlosigkeit weniger ausschlaggebend als in anderen Gebieten. Oder die Arbeitslosigkeit war nirgends ausschlaggebend; zumindest ist sie keine vollständige Erklärung.
 
 Eine andere Darstellung ist es, die AfD-Quote anhand der Arbeitslosigkeit vorherzusagen (mittels einfacher linearer Regression). Dann kann man sich die vohergesagten Werte anschauen und diese mit den tatsächlichen Werten in den Wahlkreisen vergleichen. Die Größe der Abweichung dieser beiden Werten ist dann ein Indikator dafür, ob in einem Wahlkreis der AfD-Anteil über oder unter der Erwartung (aus Sicht dieses Modells) liegt. Schauen wir uns die Ergebnisse an:
 
-![](./2017-10-12/afd_lm.png)
+![](https://sebastiansauer.github.io/images/2017-10-12/afd_lm.png)
 
 Diese Analyse zeigt, dass die östlichen Wahlkreise und speziell Sachsen über der Erwartung liegen: Für ihre Arbeitslosigkeit wäre weniger AfD-Anteil zu erwarten gewesen (laut diesem Modell).
 
 Eine dritte Betrachtungsweise ist es, die einzelnen Wahlkreise hinsichtlich ihrer Arbeitslosigkeit und ihrem AfD-Anteil in eine Rangfolge zu bringen. Dann kann man schauen, ob der AfD-Rangplatz ähnlich zu dem Rangplatz der Arbeitslosigkeit ausfällt; diese Werte wurden dann auf 0% bis 100% normiert. Ein AfD-Rangwert von 70% heißt, dass dieser Wahlkreis eine höhere AfD-Quote hat als 70% der Wahlkreise - 30% der Wahlkreise haben eine höhere AfD-Quote. Für Arbeitslosigkeit gilt die gleiche Überlegung. Konkret wurde hier die Rechnung "AfD-Anteil minus Arbeitslosigkeitsanteil" ausgeführt. Demnach bedeuten positive Werte (größer null), dass die AfD-Quote größer ist als die Arbeitslosigkeitsquote und umgekehrt. Betrachten wir das Ergebnis:
 
-![](./2017-10-12/afd_unemp_diff.png)
+![](https://sebastiansauer.github.io/images/2017-10-12/afd_unemp_diff.png)
 
 Diese Betrachtungsweise zeigt wiederum, dass der Süden und der Osten zu AfD-lastig sind, für ihre Rangplätze der Arbeitslosigkeit. Umgekehrt ist der Westen und der Norden weniger AfD-lastig als es die Rangplätze der Arbeitslosigkeit erwarten lassen würde. Das "erwarten lassen würden" geht stets von der Hypothese aus, dass Arbeitslosigkeit und AfD-Quote kovariieren, also hohe Werte im Einen mit hohen Werten im Anderen miteinander einhergehen.
 
 In dieser Betrachtung sind die südlichen Wahlkreise allerdings sogar "relativ AfD-stärker" als die östlichen. Vermutlich ist aber die obige Analyse die bessere, da hier nur mit Ranglätzen gearbeitet wurde, also mit weniger Information als in der Regression oben.
 
 # Fazit
-Es findet sich einiger Beleg, dass die Arbeitslosigkeit mit der AfD-Quote *etwas* zusammenhängt. Allerdings ist der Zusammenhang nicht sehr ausgeprägt. Andere Faktoren spielen offenbar insgesamt eine größere Rolle. 
-
+Es findet sich einiger Beleg, dass die Arbeitslosigkeit mit der AfD-Quote *etwas* zusammenhängt. Allerdings ist der Zusammenhang nicht sehr ausgeprägt. Andere Faktoren spielen offenbar insgesamt eine größere Rolle. Auf der anderen Seite: In Anbetracht der ungeheuren Vielfalt von denkbaren Einflüssen auf das Wahlverhalten ist eine Korrelation von .18 durchaus stark. Wenn man jetzt praktisch denkt und nach Konsequenzen und "was tun" fragt, was sehr berechtigt ist, darf allerdings nicht vergessen werden, dass Korrelationen kein Garant für echte (kausale) Ursachen sind.
