--- a/_posts/2017-10-12-afd-map.md
+++ b/_posts/2017-10-12-afd-map.md
@@ -1,5 +1,5 @@
 ---
-title: "Die 'AfD-Abgehängten-Follower-Hypothese"
+title: "Die 'AfD-Abgehängten-Follower-Hypothese'"
 subtitle: "Eine empirische Untersuchung"
 author: "Sebastian Sauer"
 tags: [Populismus, btw17, AfD]
@@ -8,7 +8,9 @@ categories: blog
 ---
 
 
-Eine häufig diskutierte Hypothese im Lichte der hohen Wahlerfolge der AfD lautet, dass die AfD von "Abgehängten" oder vielleicht besser "sich abgehängt fühlenden Bürgern" gewählt würde. Es wurden einige Argumente/ Belege dafür und einige dageben angeführt. Dieser Post untersucht diese Hypothese anhand der Wahlergebnisse der BTW17: Es werden die Wahlergebnisse der AfD (Zweitstimmen) ins Verhältnis gesetzt mit der Arbeitslosenquote des jeweiligen Wahlkreises. Das Ergebnis wird dann pro Wahlkreis visualisiert; dabei spiegelt im Diagramm die Farbnuance eines Wahlkreises die Übereinstimmung wider zwischen AfD-Wahlergebnis und der Arbeitslosigkeit.
+Eine häufig diskutierte Hypothese im Lichte der hohen Wahlerfolge der AfD lautet, dass die AfD von "Abgehängten" oder vielleicht besser "sich abgehängt fühlenden Bürgern" gewählt würde. Entsprechend könnte man von einer "AfD-Abgehängten-Follower-Hypothese" sprechen.
+
+Es wurden einige Argumente/ Belege dafür und einige dageben angeführt. Dieser Post untersucht diese Hypothese anhand der Wahlergebnisse der BTW17: Es werden die Wahlergebnisse der AfD (Zweitstimmen) ins Verhältnis gesetzt mit der Arbeitslosenquote des jeweiligen Wahlkreises. Das Ergebnis wird dann pro Wahlkreis visualisiert; dabei spiegelt im Diagramm die Farbnuance eines Wahlkreises die Übereinstimmung wider zwischen AfD-Wahlergebnis und der Arbeitslosigkeit.
 
 # Daten und Analyse
 
