fix broken links

--- a/_posts/2017-10-12-afd-map.md
+++ b/_posts/2017-10-12-afd-map.md
@@ -14,7 +14,7 @@ Es wurden einige Argumente/ Belege dafür und einige dagegen angeführt. Dieser 
 
 # Daten und Analyse
 
-Die Daten stammen vom Bundeswahlleiter und wurden am 10. Oktober 2017 heruntergeladen. Details zu den Daten und der Analyse sind [hier](https://sebastiansauer.github.io/psy_polafd-map/) nachzulesen.
+Die Daten stammen vom Bundeswahlleiter und wurden am 10. Oktober 2017 heruntergeladen. Details zu den Daten und der Analyse sind [hier](https://sebastiansauer.github.io/afd-map/) nachzulesen.
 
 # Arbeitslosigkeit und AfD-Stimmen einzeln
 
@@ -38,19 +38,19 @@ Kommen wir zur zentralen Frage dieses Posts: Steht die AfD-Stimmenzahl (eines Wa
 
 Es gibt verschiedene Wege, diese Frage anzugehen. Ein Weg ist, dass Verhältnis von AfD-Anteil zur Arbeitslosenquote zu bilden. Ein Wert von 1 würde dann sagen, dass der AfD-Stimmen-Prozentwert dem Prozentwert der Arbeitslosigkeit entspricht. Ein Wert von 2 sagt, dass der AfD-Anteil doppelt so groß wie die Arbeitslosigkeit ist usw.
 
-![](https://sebastiansauer.github.io/psy_polimages/2017-10-12/afd_dens.png)
+![](https://sebastiansauer.github.io/psy_pol/images/2017-10-12/afd_dens.png)
 
 Man sieht, dass im reichen Zentralbayern im Verhältnis zur Arbleitslosigkeitsquote relativ am meisten Leute die AfD gewählt haben. Offenbar war hier die Arbeitslosigkeit weniger ausschlaggebend als in anderen Gebieten. Oder die Arbeitslosigkeit war nirgends ausschlaggebend; zumindest ist sie keine vollständige Erklärung.
 
 Eine andere Darstellung ist es, die AfD-Quote anhand der Arbeitslosigkeit vorherzusagen (mittels einfacher linearer Regression). Dann kann man sich die vorhergesagten Werte anschauen und diese mit den tatsächlichen Werten in den Wahlkreisen vergleichen. Die Größe der Abweichung dieser beiden Werten ist dann ein Indikator dafür, ob in einem Wahlkreis der AfD-Anteil über oder unter der Erwartung (aus Sicht dieses Modells) liegt. Schauen wir uns die Ergebnisse an:
 
-![](https://sebastiansauer.github.io/psy_polimages/2017-10-12/afd_lm.png)
+![](https://sebastiansauer.github.io/psy_pol/images/2017-10-12/afd_lm.png)
 
 Diese Analyse zeigt, dass die östlichen Wahlkreise und speziell Sachsen über der Erwartung liegen: Für ihre Arbeitslosigkeit wäre weniger AfD-Anteil zu erwarten gewesen (laut diesem Modell).
 
 Eine dritte Betrachtungsweise ist es, die einzelnen Wahlkreise hinsichtlich ihrer Arbeitslosigkeit und ihrem AfD-Anteil in eine Rangfolge zu bringen. Dann kann man schauen, ob der AfD-Rangplatz ähnlich zu dem Rangplatz der Arbeitslosigkeit ausfällt; diese Werte wurden dann auf 0% bis 100% normiert. Ein AfD-Rangwert von 70% heißt, dass dieser Wahlkreis eine höhere AfD-Quote hat als 70% der Wahlkreise - 30% der Wahlkreise haben eine höhere AfD-Quote. Für Arbeitslosigkeit gilt die gleiche Überlegung. Konkret wurde hier die Rechnung "AfD-Anteil minus Arbeitslosigkeitsanteil" ausgeführt. Demnach bedeuten positive Werte (größer null), dass die AfD-Quote größer ist als die Arbeitslosigkeitsquote und umgekehrt. Betrachten wir das Ergebnis:
 
-![](https://sebastiansauer.github.io/psy_polimages/2017-10-12/afd_unemp_diff.png)
+![](https://sebastiansauer.github.io/psy_pol/images/2017-10-12/afd_unemp_diff.png)
 
 Diese Betrachtungsweise zeigt wiederum, dass der Süden und der Osten zu AfD-lastig sind, für ihre Rangplätze der Arbeitslosigkeit. Umgekehrt ist der Westen und der Norden weniger AfD-lastig als es die Rangplätze der Arbeitslosigkeit erwarten lassen würde. Das "erwarten lassen würden" geht stets von der Hypothese aus, dass Arbeitslosigkeit und AfD-Quote kovariieren, also hohe Werte im Einen mit hohen Werten im Anderen miteinander einhergehen.
 
