populism indicator details

--- a/_posts/2017-10-12-afd-map.md
+++ b/_posts/2017-10-12-afd-map.md
@@ -30,19 +30,19 @@ Dieses Diagramm zeigt den Anteil gültiger Zweitstimmen bei der Bundestagswahl 2
 
 ![](https://sebastiansauer.github.io/psy_pol/images/2017-10-12/afd_prop.png)
 
-Das Diagramm zeigt, wie allgemein bekannt, das in Sachsen die AfD-Zustimmung am höchsten ist; Werte um 30% sind in rotem Farbton dargestellt (eine Standard-Farbpalette übrigens).
+Das Diagramm zeigt, wie allgemein bekannt, dass in Sachsen die AfD-Zustimmung am höchsten ist; Werte um 30% sind in rotem Farbton dargestellt (eine Standard-Farbpalette übrigens).
 
 # AfD-Stimmen im Verhältnis zur Arbeitslosigkeit
 
 Kommen wir zur zentralen Frage dieses Posts: Steht die AfD-Stimmenzahl (eines Wahlkreises) im direkten Zusammenhang mit der Arbeitslosigkeit (des Wahlkreises)?
 
-Es gibt verschiedene Wege, diese Frage anzugehen. Ein Weg ist, dass Verhältnis von AfD-Anteil zur Arbeitslosenquote zu bilden. Ein Wert von 1 würde dann sagen, dass der AfD-Stimmen-Prozentwert dem Prozentwert der Arbeitslosigkeit entspricht. Ein Wert von 2 sagt, dass der AfD-Anteil doppelt so groß wie die Arbeitslosigkeit ist usw.
+Es gibt verschiedene Wege, diese Frage anzugehen. Ein Weg ist, das Verhältnis von AfD-Anteil zur Arbeitslosenquote zu bilden. Ein Wert von 1 würde dann sagen, dass der AfD-Stimmen-Prozentwert dem Prozentwert der Arbeitslosigkeit entspricht. Ein Wert von 2 sagt, dass der AfD-Anteil doppelt so groß wie die Arbeitslosigkeit ist usw. Im folgenden Diagramm ist diese "AfD-Dichte" dargestellt:
 
 ![](https://sebastiansauer.github.io/psy_pol/images/2017-10-12/afd_dens.png)
 
-Man sieht, dass im reichen Zentralbayern im Verhältnis zur Arbleitslosigkeitsquote relativ am meisten Leute die AfD gewählt haben. Offenbar war hier die Arbeitslosigkeit weniger ausschlaggebend als in anderen Gebieten. Oder die Arbeitslosigkeit war nirgends ausschlaggebend; zumindest ist sie keine vollständige Erklärung.
+Man sieht, dass im reichen Zentralbayern *im Verhältnis zur Arbleitslosigkeitsquote relativ* am meisten Leute die AfD gewählt haben. Offenbar war hier die Arbeitslosigkeit weniger ausschlaggebend als in anderen Gebieten. Oder die Arbeitslosigkeit war nirgends ausschlaggebend; zumindest ist sie keine vollständige Erklärung.
 
-Eine andere Darstellung ist es, die AfD-Quote anhand der Arbeitslosigkeit vorherzusagen (mittels einfacher linearer Regression). Dann kann man sich die vorhergesagten Werte anschauen und diese mit den tatsächlichen Werten in den Wahlkreisen vergleichen. Die Größe der Abweichung dieser beiden Werten ist dann ein Indikator dafür, ob in einem Wahlkreis der AfD-Anteil über oder unter der Erwartung (aus Sicht dieses Modells) liegt. Schauen wir uns die Ergebnisse an:
+Eine andere Interpretation ist es, die AfD-Quote anhand der Arbeitslosigkeit vorherzusagen (mittels einfacher linearer Regression). Dann kann man sich die vorhergesagten Werte anschauen und diese mit den tatsächlichen Werten in den Wahlkreisen vergleichen. Die Größe der Abweichung dieser beiden Werten ist dann ein Indikator dafür, ob in einem Wahlkreis der AfD-Anteil über oder unter der Erwartung (aus Sicht dieses Modells) liegt. Schauen wir uns die Ergebnisse an:
 
 ![](https://sebastiansauer.github.io/psy_pol/images/2017-10-12/afd_lm.png)
 
@@ -52,7 +52,7 @@ Eine dritte Betrachtungsweise ist es, die einzelnen Wahlkreise hinsichtlich ihre
 
 ![](https://sebastiansauer.github.io/psy_pol/images/2017-10-12/afd_unemp_diff.png)
 
-Diese Betrachtungsweise zeigt wiederum, dass der Süden und der Osten zu AfD-lastig sind, für ihre Rangplätze der Arbeitslosigkeit. Umgekehrt ist der Westen und der Norden weniger AfD-lastig als es die Rangplätze der Arbeitslosigkeit erwarten lassen würde. Das "erwarten lassen würden" geht stets von der Hypothese aus, dass Arbeitslosigkeit und AfD-Quote kovariieren, also hohe Werte im Einen mit hohen Werten im Anderen miteinander einhergehen.
+Diese Betrachtungsweise zeigt wiederum, dass der Süden und der Osten zu AfD-lastig sind, im Verhältnis zu ihren Rangplätze der Arbeitslosigkeit (laut diesem Modell). Umgekehrt ist der Westen und der Norden weniger AfD-lastig als es die Rangplätze der Arbeitslosigkeit erwarten lassen würde. Das "erwarten lassen würden" geht stets von der Hypothese aus, dass Arbeitslosigkeit und AfD-Quote kovariieren, also hohe Werte im Einen mit hohen Werten im Anderen miteinander einhergehen.
 
 In dieser Betrachtung sind die südlichen Wahlkreise allerdings sogar "relativ AfD-stärker" als die östlichen. Vermutlich ist aber die obige Analyse die bessere, da hier nur mit Ranglätzen gearbeitet wurde, also mit weniger Information als in der Regression oben.
 
